--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Swapnil Bhojwani",
   "type": "commonjs",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start":"parcel index.html",
+    "build":"parcel build index.html"
   },
   "devDependencies": {
     "parcel": "^2.15.4"
@@ -14,5 +16,9 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
-  }
+  },
+  "browerslist":[
+    "last 2 versions"
+  ]
+  
 }
