feat: learned about routing in react

--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
   "type": "commonjs",
   "scripts": {
     "test": "jest",
-    "start":"parcel index.html",
-    "build":"parcel build index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "devDependencies": {
-    "parcel": "^2.15.4"
+    "parcel": "^2.16.1"
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router": "^7.9.6",
+    "react-router-dom": "^6.22.0"
   },
-  "browerslist":[
+  "browerslist": [
     "last 2 versions"
   ]
-  
 }
